--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -167,6 +167,16 @@ on boot
     chown system system /sys/class/timed_output/vibrator/pattern
     chmod 0444 /proc/cmdline
 
+    chown system system /sys/devices/system/cpu/cpu0/online
+    chmod 0664 /sys/devices/system/cpu/cpu0/online
+    chown system system /sys/devices/system/cpu/cpu1/online
+    chmod 0664 /sys/devices/system/cpu/cpu1/online
+    chown system system /sys/devices/system/cpu/cpu2/online
+    chmod 0664 /sys/devices/system/cpu/cpu2/online
+    chown system system /sys/devices/system/cpu/cpu3/online
+    chmod 0664 /sys/devices/system/cpu/cpu3/online
+
+
 # import cne init file
 on post-fs
     export_rc /persist/init.cne.rc
