ueventd.rc:update permission

--- a/configs/ueventd.aries.rc
+++ b/configs/ueventd.aries.rc
@@ -103,13 +103,36 @@
 /dev/qseecom              0666   system     drmrpc
 /dev/diag                 0666   root       root
 /dev/ramdump_dsps         0600   system     system
-/dev/ramdump_lpass         0600   system     system
+/dev/ramdump_lpass        0600   system     system
 /dev/ramdump_riva         0600   system     system
-/dev/ramdump_smem-dsps         0600   system     system
-/dev/audience_es310         0660   system     audio
-/dev/efs_bridge         0600   system     system
-/dev/msm_acdb         0660   system     audio
-/dev/msm_rtac         0660   system     audio
-/dev/smd_cxm_qmi         0660   radio     radio
-/dev/sysmatdrv         0660   system     system
-/dev/ttyHS2         0660   system     audio
+/dev/ramdump_smem-dsps    0600   system     system
+/dev/audience_es310       0660   system     audio
+/dev/efs_bridge           0600   system     system
+/dev/msm_qcelp_in         0660   system     audio
+/dev/msm_evrc_in          0660   system     audio
+/dev/msm_preproc_ctl      0660   system     audio
+/dev/msm_qcelp            0660   system     audio
+/dev/msm_evrc             0660   system     audio
+/dev/msm_acdb             0660   system     audio
+/dev/msm_fm               0660   system     audio
+/dev/msm_ac3              0660   system     audio
+/dev/msm_cad              0660   system     audio
+/dev/msm_rtac             0660   system     audio
+/dev/msm_pcm_lp_dec       0660   system     audio
+/dev/msm_mvs              0660   system     audio
+/dev/smd_cxm_qmi          0660   radio      radio
+/dev/sysmatdrv            0660   system     system
+/dev/ttyHSL2              0660   system     audio
+/dev/ttyHS2               0660   system     audio
+/dev/oncrpc/300000ba:00010000  0660   system     drmrpc
+/dev/radio0               0644   fm_radio   fm_radio
+/dev/msm_voicememo        0660   system     audio
+/dev/gss                  0660   gps        gps
+/dev/pmem_audio           0660   system     audio
+/dev/block/mmcblk0p12     0600   system     system
+/dev/block/mmcblk0p13     0600   system     system
+/dev/block/mmcblk0p16     0600   system     system
+/dev/block/mmcblk0p14     0600   system     system
+
+/dev/ks_bridge            0600   system     system
+/dev/efs_bridge           0600   system     system
