--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -361,7 +361,7 @@ service qmuxd /system/bin/qmuxd
 
 service netmgrd /system/bin/netmgrd
     class main
-    disabled
+#    disabled
 
 service sensors /system/bin/sensors.qcom
     class late_start
