--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -36,10 +36,6 @@ on init
     mount debugfs debugfs /sys/kernel/debug
     write /proc/sys/vm/legacy_va_layout 1
 
-on fs
-#    mount_all ./fstab.aries
-    setprop ro.crypto.fuse_sdcard true
-
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
@@ -90,13 +86,16 @@ on boot
 
     setprop ro.telephony.call_ring.multiple false
 
-    #Set SUID bit for usbhub
-    chmod 4755 /system/bin/usbhub
-    chmod 755 /system/bin/usbhub_init
-
     #Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
 
+    #port-bridge
+    chmod 0660 /dev/smd0
+    chown system system /dev/smd0
+
+    #BT DUN port-bridge
+    chmod 0660 /dev/smd7
+    chown bluetooth bluetooth /dev/smd7
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
@@ -111,9 +110,21 @@ on boot
 
     # Change owner and group for media server and surface flinger
     chown system system /sys/devices/virtual/graphics/fb1/format_3d
+    chown system system /sys/devices/virtual/graphics/fb1/hpd
 
     #For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
+
+    chmod 660 /dev/rtc0
+    chown system system /dev/rtc0
+
+    chown root system /proc/net/ip_conntrack
+
+    # WTF
+    chmod 666 /proc/cmdline
+
+    # Enable DEBUG_SUSPEND, DEBUG_EXIT_SUSPEND, and DEBUG_WAKEUP
+    write /sys/module/wakelock/parameters/debug_mask 7
 
     #To allow interfaces to get v6 address when tethering is enabled
     write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
@@ -138,6 +149,7 @@ on boot
     write /proc/sys/net/ipv6/conf/rmnet_usb3/accept_ra 2
 
     write /sys/module/subsystem_restart/parameters/restart_level 3
+    write /sys/module/subsystem_restart/parameters/enable_ramdumps 1
     write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
 
     # Allow write permission for rtc wakealarm
@@ -193,7 +205,8 @@ on post-fs-data
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
+    # to observe dnsmasq.leases file for dhcp information of soft ap.
+    chown dhcp system /data/misc/dhcp
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
@@ -243,12 +256,18 @@ on post-fs-data
     #Provide the access to hostapd.conf only to root and group
     chmod 0660 /data/hostapd/hostapd.conf
 
+    chown system system /dev/sysmatdrv
+    chmod 0666 /dev/sysmatdrv
+
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
 
     mkdir /data/audio/ 0770 media audio
     # Enable the setgid bit on the directory
     chmod 2770 /data/audio
+
+    # Camera
+    mkdir /data/camera 0771 root camera
 
     setprop vold.post_fs_data_done 1
 
@@ -259,20 +278,32 @@ on post-fs-data
     chown system system /data/qcks/efs3.bin
     chown system system /data/qcks/temp.dump
 
-
-# Export GPIO56 for fusion targets to enable/disable hub
-service usbhub_init /system/bin/usbhub_init
-   class late_start
-   user root
-   disabled
-   oneshot
-
+on charger
+#    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
+    write /sys/module/rpm_resources/enable_low_power/L2_cache 1
+    write /sys/module/rpm_resources/enable_low_power/pxo 1
+    write /sys/module/rpm_resources/enable_low_power/vdd_dig 2
+    write /sys/module/rpm_resources/enable_low_power/vdd_mem 2
+    write /sys/module/pm_8x60/modes/cpu0/power_collapse/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu1/power_collapse/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu2/power_collapse/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu3/power_collapse/suspend_enabled 1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "userspace"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 192000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed 192000
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "userspace"
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 192000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_setspeed 192000
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    
 on property:init.svc.surfaceflinger=stopped
     stop ppd
     stop hdmid
-
-on property:ro.board.platform=msm7630_fusion
-    start usbhub_init
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
@@ -293,6 +324,7 @@ service qcom-c_main-sh /system/bin/sh /init.qcom.class_main.sh
 
 on property:vold.decrypt=trigger_restart_framework
     start qcom-c_main-sh
+    start config_bluetooth
 
 service cnd /system/bin/cnd
     class late_start
@@ -306,19 +338,17 @@ service rmt_storage /system/bin/rmt_storage
 on property:ro.boot.emmc=true
     start rmt_storage
 
+service config_bluetooth /system/bin/sh /system/etc/init.qcom.bt.sh "onboot"
+    class core
+    user root
+    oneshot
+
 service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     class late_start
     user bluetooth
     group qcom_oncrpc bluetooth net_bt_admin
     disabled
     oneshot
-
-service hciattach_ath3k /system/bin/sh /system/etc/init.ath3k.bt.sh
-     class late_start
-     user bluetooth
-     group system bluetooth net_bt_admin misc
-     disabled
-     oneshot
 
 service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
     class late_start
@@ -361,7 +391,6 @@ service qmuxd /system/bin/qmuxd
 
 service netmgrd /system/bin/netmgrd
     class main
-#    disabled
 
 service sensors /system/bin/sensors.qcom
     class late_start
@@ -464,36 +493,6 @@ service gpsone_daemon /system/bin/gpsone_daemon
     group gps qcom_oncrpc inet net_raw
     disabled
 
-#service quipc_igsn /system/bin/quipc_igsn
-#    class late_start
-#    user gps
-#    group inet gps
-#    disabled
-
-#service quipc_main /system/bin/quipc_main
-#    class late_start
-#    user gps
-#    group gps net_admin wifi inet
-#    disabled
-
-#service location_mq /system/bin/location-mq
-#    class late_start
-#    user gps
-#    group gps
-#    disabled
-
-#service xtwifi_inet /system/bin/xtwifi-inet-agent
-#    class late_start
-#    user gps
-#    group inet gps
-#    disabled
-
-#service xtwifi_client /system/bin/xtwifi-client
-#    class late_start
-#    user gps
-#    group net_admin wifi inet gps
-#    disabled
-
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     class late_start
     user root
@@ -543,13 +542,6 @@ service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     user root
     disabled
     oneshot
-
-#service wifi-sdio-on /system/bin/sh /system/etc/init.qcom.sdio.sh
-#    class late_start
-#    group wifi inet
-#    disabled
-#    oneshot
-
 
 on property:sys.boot_completed=1
     start qcom-post-boot
@@ -681,7 +673,7 @@ on property:diagmodem.enable=false
     stop diagmodem
 
 on property:persist.radio.ramdump_sdcard=1
-    write /sys/module/subsystem_restart/parameters/enable_ramdumps 1
+    write /sys/module/subsystem_restart/parameters/enable_modem_ramdumps 1
 
 on property:persist.radio.ramdump_sdcard=0
-    write /sys/module/subsystem_restart/parameters/enable_ramdumps 0
+    write /sys/module/subsystem_restart/parameters/enable_modem_ramdumps 0
