--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -285,7 +285,7 @@ on post-fs-data
     chmod 2770 /dev/socket/mpdecision
 
 on charger
-#    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 2
