--- a/configs/ueventd.aries.rc
+++ b/configs/ueventd.aries.rc
@@ -1,3 +1,4 @@
+/dev/uinput               0660   system     bluetooth
 /dev/genlock              0666   system     system
 /dev/kgsl                 0666   system     system
 /dev/kgsl-3d0             0666   system     system
@@ -45,7 +46,6 @@
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_vidc_enc_sec     0660   system     audio
 /dev/msm_rotator          0664   system     system
-/dev/hw_random            0660   system     system
 
 #permissions for audio
 /dev/msm_qcelp            0660   system     audio
@@ -69,7 +69,7 @@
 /dev/tty_sdio_00          0660   system     system
 /dev/ttyGS0               0660   system     system
 /dev/i2c-5                0660   media       media
-/dev/hw_random            0640   root       system
+/dev/hw_random            0640   root       root
 
 # try to fix some
 /dev/qseecom              0666   system     drmrpc
