Fix wifi,bt,init audio

--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -58,7 +58,8 @@ update_config=1
 # DIR=/var/run/wpa_supplicant GROUP=wheel
 # DIR=/var/run/wpa_supplicant GROUP=0
 # (group can be either group name or gid)
-ctrl_interface=wlan0
+#
+ctrl_interface=<will be set by wifi.c>
 
 # IEEE 802.1X/EAPOL version
 # wpa_supplicant is implemented based on IEEE Std 802.1X-2004 which defines
