--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -43,9 +43,9 @@ on early-boot
 on early-init
     # for backwards compatibility
     export EXTERNAL_STORAGE /storage/sdcard0
-    mkdir /storage 0151 system sdcard_r
-    mkdir /storage/sdcard0 0000 system system
-    mkdir /storage/udisk 0000 system system
+    mkdir /storage 0775 system sdcard_r
+    mkdir /storage/sdcard0 0775 system system
+    mkdir /storage/udisk 0775 system system
     mkdir /storage_int 0775 media_rw media_rw
     chown media_rw media_rw /storage_int
     symlink /storage/sdcard0 /sdcard
@@ -187,6 +187,7 @@ on boot
     chown system system /sys/devices/system/cpu/cpu3/online
     chmod 0664 /sys/devices/system/cpu/cpu3/online
 
+    start qcamerasvr
 
 # import cne init file
 on post-fs
@@ -195,8 +196,7 @@ on post-fs
 
 # msm specific files that need to be created on /data
 on post-fs-data
-    mkdir /data/misc/adb 02750 system shell
-    mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
+    mkdir /data/media 0770 media_rw media_rw
 
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -211,6 +211,10 @@ on post-fs-data
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
+
+    # Workaround for conn_init not copying the updated firmware
+    rm /data/misc/wifi/WCNSS_qcom_cfg.ini
+    rm /data/misc/wifi/WCNSS_qcom_wlan_nv.bin
 
     # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
     # We chown/chmod /persist again so because mount is run as root + defaults
@@ -265,10 +269,12 @@ on post-fs-data
 
     mkdir /data/audio/ 0770 media audio
     # Enable the setgid bit on the directory
+    mkdir /data/audio 0770 media audio
     chmod 2770 /data/audio
 
     # Camera
     mkdir /data/camera 0771 root camera
+    mkdir /data/qcks 0770 system system
 
     setprop vold.post_fs_data_done 1
     chown system /dev/block/platform/msm_sdcc.1/by-name
@@ -356,6 +362,12 @@ service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     group qcom_oncrpc bluetooth net_bt_admin system
     disabled
     oneshot
+
+on property:bluetooth.hciattach=true
+    start hciattach
+
+on property:bluetooth.hciattach=false
+    setprop bluetooth.status off
 
 service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
     class late_start
@@ -642,3 +654,9 @@ on property:persist.radio.ramdump_sdcard=1
 
 on property:persist.radio.ramdump_sdcard=0
     write /sys/module/subsystem_restart/parameters/enable_modem_ramdumps 0
+
+#start camera server as daemon
+service qcamerasvr /system/bin/mm-qcamera-daemon
+    class late_start
+    user camera
+    group system camera inet input graphics
