--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -658,5 +658,5 @@ on property:persist.radio.ramdump_sdcard=0
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
-    user camera
+    user media
     group system camera inet input graphics
