--- a/configs/init.target.rc
+++ b/configs/init.target.rc
@@ -98,7 +98,7 @@ service thermald /system/bin/thermald -c /system/etc/thermald.conf
     socket thermald stream 0666 root root
     user root
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service mpdecision /system/bin/mpdecision --avg_comp
     class main
 
 service ramdump_riva /system/bin/logwrapper /system/bin/ramdump riva /dev/ramdump_riva /storage_int/ramdump/riva_ramdump.bin
@@ -159,7 +159,7 @@ on property:persist.sys.aries.power_profile=high
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2000000
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 400000000
-    stop mpdecision
+#    stop mpdecision
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
@@ -176,7 +176,7 @@ on property:persist.sys.aries.power_profile=middle
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2000000
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 400000000
-    start mpdecision
+#    start mpdecision
 
 on property:persist.sys.aries.power_profile=low
 #    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 100000
@@ -187,7 +187,10 @@ on property:persist.sys.aries.power_profile=low
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 918000
     write /sys/class/leds/lcd-backlight/max_brightness 70
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 200000000
-    start mpdecision
+#    start mpdecision
+
+on property:persist.sys.display_prefer=0
+    write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 2
 
 on property:persist.sys.display_prefer=1
     write /sys/devices/virtual/graphics/fb0/msm_fb_dispparam 1
