--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -34,30 +34,17 @@ on early-init
     write /proc/sys/vm/legacy_va_layout 1
 
 on init
-#    mkdir /storage/sdcard0 0775 system system
-#    mkdir /storage/usbdisk 0775 system system
+    mkdir /storage/sdcard0 0775 system system
+    mkdir /storage/usbdisk 0775 system system
     mkdir /storage_int 0775 media_rw media_rw
     chown media_rw media_rw /storage_int
-#    export EXTERNAL_STORAGE /storage/sdcard0
+    export EXTERNAL_STORAGE /storage/sdcard0
 
-#    symlink /storage/sdcard0 /sdcard
-#    symlink /storage/sdcard0 /mnt/sdcard
-#    symlink /storage/usbdisk /usbdisk
-#    symlink /storage/usbdisk /mnt/usbdisk
-
-    # See storage config details at http://source.android.com/tech/storage/
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /storage/emulated 0555 root root
-
-    export EXTERNAL_STORAGE /storage/emulated/legacy
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
-
-    # Support legacy paths
-    symlink /storage/emulated/legacy /sdcard
-    symlink /storage/emulated/legacy /mnt/sdcard
-    symlink /storage/emulated/legacy /storage/sdcard0
-    symlink /mnt/shell/emulated/0 /storage/emulated/legacy    
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/usbdisk /usbdisk
+    symlink /storage/usbdisk /mnt/usbdisk
+    
     # Set permissions for persist partition
     mkdir /persist 0771 system system
    
@@ -96,6 +83,8 @@ on boot
     chown radio radio /sys/devices/virtual/hsicctl/hsicctl0/modem_wait
 
     setprop wifi.interface wlan0
+
+    # chmod 0666 /sys/class/leds/flashlight/brightness
 
     setprop ro.telephony.call_ring.multiple false
 
@@ -652,8 +641,7 @@ service profiler_daemon /system/bin/profiler_daemon
     group root
     disabled
 
-#service sdcard /system/bin/sdcard /storage_int /storage/sdcard0 1023 1023
-service sdcard /system/bin/sdcard /storage_int /mnt/shell/emulated 1023 1023
+service sdcard /system/bin/sdcard /storage_int /storage/sdcard0 1023 1023
     class late_start
 
 on property:ro.fuse_sdcard=true
