--- a/configs/ueventd.aries.rc
+++ b/configs/ueventd.aries.rc
@@ -109,3 +109,27 @@
 /dev/msm_dsps             0600   system     system
 /dev/ks_bridge            0600   system     system
 /dev/efs_bridge           0600   system     system
+
+/sys/devices/system/cpu/cpufreq ondemand/boostfreq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/boostpulse  0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/boosttime   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sampling_rate   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/io_is_busy      0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/down_differential   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/powersave_bias  0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sampling_down_factor    0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold_multi_core   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/down_differential_multi_core   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/optimal_freq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sync_freq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold_any_cpu_load   0664    system  system
+
+/sys/devices/system/cpu/cpufreq interactive/boostpulse  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/timer_rate  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/min_sample_rate 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/min_sample_time 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/hispeed_freq    0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/go_hispeed_load 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/above_hispeed_delay 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/io_is_busy      0664    system  system
