--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -839,7 +839,7 @@ service qrngd /system/bin/qrngd -f
    group root
 
 service qseecomd /system/bin/qseecomd
-   class late_start
+   class core
    user system
    group system
 
