--- a/WCNSS_qcom_cfg.ini
+++ b/WCNSS_qcom_cfg.ini
@@ -93,6 +93,10 @@ McastBcastFilter=3
 hostArpOffload=1
 
 
+#Flag to enable HostNSOffload feature or not
+
+hostNSOffload=0
+
 #SoftAP Related Parameters
 
 # AP MAc addr
@@ -382,6 +386,15 @@ gThermalMitigationEnable=1
 #List of Country codes for which 11ac needs to be disabled
 #Each country code must be delimited by comma(,)
 gListOfNon11acCountryCode=RU,UA,ZA
+
+#Maxium Channel time in msec
+gMaxMediumTime = 6000
+
+# 802.11K support
+gRrmEnable=1
+gRrmOperChanMax=8
+gRrmNonOperChanMax=8
+gRrmRandIntvl=100
 
 END
 
