vold: fix mount Internal sdcard
update fstab
 - Vold managed volumes must have auto mount point
 - voldmanaged uses sdcard0 and sdcard1 instead of int_card and ext_card arguments now

init: add FUSE sdcard daemon service for sdcard and usbdisk

Change-Id: I70e7419d20962600ddc10baf8ce432d6b1eeff98
Signed-off-by: 秋叶随风Ivan <yanziily@gmail.com>

--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -36,6 +36,8 @@ on early-init
 
 on init
     mkdir /storage 0775 system system
+    mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
+    mkdir /mnt/media_rw/usbdisk 0700 media_rw media_rw
     mkdir /storage/sdcard0 0775 system system
     mkdir /storage/usbdisk 0775 system system
     mkdir /storage_int 0775 media_rw media_rw
@@ -541,6 +543,14 @@ service sensors /system/bin/sensors.qcom
     class late_start
     user root
     group root
+    disabled
+
+service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard0 /storage/sdcard0
+    class late_start
+    disabled
+
+service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /storage/usbdisk
+    class late_start
     disabled
 
 service wpa_supplicant /system/bin/wpa_supplicant \
