--- a/WCNSS_qcom_cfg.ini
+++ b/WCNSS_qcom_cfg.ini
@@ -64,6 +64,11 @@ InfraUapsdBeSrvIntv=0
 InfraUapsdBkSrvIntv=0
 
 
+# Disable RSSI FW filtering
+
+gEnableFWRssiMonitoring=1
+
+
 # Make 1x1 the default antenna configuration
 
 gNumRxAnt=1
@@ -110,13 +115,13 @@ gEnableApProt=1
 
 
 #Enable OBSS protection
-
-gEnableApOBSSProt=1
+#Xiaomi changed
+gEnableApOBSSProt=0
 
 
 #Enable/Disable UAPSD for SoftAP
-
-gEnableApUapsd=0
+#Xiaomi changed
+gEnableApUapsd=1
 
 
 # Fixed Rate
@@ -178,7 +183,12 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better 
 #the RSSI of the new/roamable AP should be for roaming
-RoamRssiDiff=3
+#Xiaomi changed
+RoamRssiDiff=5
+
+#Configure the RSSI gap that will be used to partition/categorize width of
+#each  individual category (aka bucket).
+gRssiCatGap=5
 
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
@@ -272,7 +282,8 @@ BtAmpPreferredChannel=0
 
 #Preferred band (both or 2.4 only or 5 only)
 
-BandCapability=0
+#Xiaomi changed
+BandCapability=1
 
 
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
@@ -302,7 +313,8 @@ gAPChannelSelectOperatingBand=0
 
 
 #Channel Bonding
-gChannelBondingMode5GHz=1
+#Xiaomi changed
+#gChannelBondingMode5GHz=6
 
 
 #Enable Keep alive with non-zero period value
@@ -343,6 +355,13 @@ gEnableCloseLoop=1
 #Data Inactivity Timeout when in powersave (in ms)
 gDataInactivityTimeout=200
 
+#country code
+#Xiaomi changed
+gCountryCodePriority=1
+
+#Xiaomi changed
+gEnableDynamicDTIM=3
+
 # VHT Tx/Rx MCS values
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
@@ -357,9 +376,14 @@ gVhtTxMCS=2
 # gPassiveMinChannelTime=60
 # gActiveMaxChannelTime=40
 # gActiveMinChannelTime=20
+gPassiveMaxChannelTimeConc=110
+gPassiveMinChannelTimeConc=60
+gActiveMaxChannelTimeConc=27
+gActiveMinChannelTimeConc=20
+gRestTimeConc=100
 
 #If set to 0, MCC is not allowed.
-gEnableMCCMode=1
+gEnableMCCMode=0
 
 # 1=enable STBC; 0=disable STBC 
 gEnableRXSTBC=1
