Update this from mako, because we use mako's qcks
N/A

Change-Id: I5552c8822ea01c7bd24a720ae9a193502bb6c1b2
Signed-off-by: huangqiwu <huangqiwu@xiaomi.com>

Conflicts:
	configs/init.aries.rc

--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -824,9 +824,11 @@ service ramdump_dsps2 /system/bin/logwrapper /system/bin/ramdump dsps2 /dev/ramd
    user system
    group system media_rw
 
-service kickstart /system/bin/qcks -i /firmware/image/
+service kickstart /system/bin/qcks -i /firmware/image/ -r /data/tombstones/mdm/
+    class core
+    user system
+    group system
     oneshot
-    disabled
 
 service mdm_helper /system/bin/mdm_helper
     class main
