set kickstart permission
N/A

Change-Id: I4eb87102ed20f8c34ea933a40ab50bb6876dbdad
Signed-off-by: huangqiwu <huangqiwu@xiaomi.com>

--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -833,7 +833,7 @@ service ramdump_dsps2 /system/bin/logwrapper /system/bin/ramdump dsps2 /dev/ramd
 service kickstart /system/bin/qcks -i /firmware/image/ -r /data/tombstones/mdm/
     class core
     user system
-    group system
+    group system radio
     oneshot
 
 service mdm_helper /system/bin/mdm_helper
